# white-tower

./: README.md
medicourse-core/: .env.example  Cargo.toml
medicourse-core/migrations/: 20251208065902_init.up.sql
medicourse-core/src/: app_state.rs  db.rs  handlers.rs  main.rs
medicourse-core/src/handlers/: login.rs
medicourse_mobile/: README.md  pubspec.yaml
medicourse_mobile/android/app/: build.gradle.kts
medicourse_mobile/ios/Runner/: Info.plist
medicourse_mobile/ios/Runner.xcodeproj/: project.pbxproj
medicourse_mobile/lib/: main.dart
medicourse_mobile/lib/net/: http.dart
medicourse_mobile/lib/pages/: game_level_screen.dart  subject_list_screen.dart  table_of_subject_screen.dart
medicourse_mobile/lib/services/: subject_service.dart
medicourse_mobile/linux/: CMakeLists.txt
medicourse_mobile/linux/runner/: my_application.cc
medicourse_mobile/macos/Runner.xcodeproj/: project.pbxproj
medicourse_mobile/test/: widget_test.dart
medicourse_mobile/web/: index.html  manifest.json
medicourse_mobile/windows/: CMakeLists.txt
medicourse_mobile/windows/runner/: Runner.rc  main.cpp
white-tower-core/: .env.example  Cargo.toml
white-tower-core/migrations/: 20251208065902_init.down.sql
white-tower-core/src/: auth.rs  repo.rs
white_tower_mobile/: .gitignore  README.md  pubspec.yaml
white_tower_mobile/.github/: copilot-instructions.md
white_tower_mobile/lib/: main.dart  main.g.dart  routes.dart
white_tower_mobile/linux/: CMakeLists.txt
white_tower_mobile/web/: index.html  manifest.json
white_tower_mobile/windows/: CMakeLists.txt
(+54 files in other folders)
