[package]
name = "medicourse-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = "0.4.42"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "json", "macros", "postgres", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
